# deskthang

./: .gitignore  CMakeLists.txt  GC9A01.c  GC9A01.h  main.c  readme.md
docs/: display.md  doc_cleanup.md  host.md  implementation_tasks.md  index.md  protocol.md  protocol_architecture.md  protocol_constants.md  protocol_discrepancies.md  protocol_modules.md  protocol_state_machine.md  protocol_transitions.md  serial_implementation.md  state_machine.md
host/: README.md  build.zig  build.zig.zon  diff.txt
host/src/: main.zig  protocol.zig
host/src/command/: image.zig
host/src/protocol/: constants.zig  logger.zig  packet.zig  protocol.zig  serial.zig  state.zig  transfer.zig
src/: main.c
src/common/: definitions.h  deskthang_constants.h
src/debug/: debug.c  debug.h
src/error/: error.c  error.h  logging.c  logging.h  recovery.c  recovery.h
src/hardware/: GC9A01.c  GC9A01.h  colors.h  deskthang_gpio.c  deskthang_gpio.h  deskthang_spi.c  deskthang_spi.h  display.c  display.h  gpio.c  gpio.h  hardware.c  hardware.h  serial.c  serial.h  spi.c  spi.h  tusb_config.h
src/protocol/: command.c  command.h  packet.c  packet.h  protocol.c  protocol.h  protocol_constants.h  transfer.c  transfer.h
src/state/: context.c  context.h  state.c  state.h  transition.c  transition.h  validation.c  validation.h
src/system/: time.c  time.h
src/tusb/: tusb_config.h
src/tusb/hw/bsp/: board.h
test/: CMakeLists.txt  CMakeLists_host.txt  main.c  readme.md  run_tests.sh  test_command.c  test_error.c  test_logging.c  test_packet.c  test_protocol.c  test_recovery.c  test_state.c
test/mocks/: hardware_mock.c  hardware_mock.h  mock_display.c  mock_display.h  mock_packet.c  mock_packet.h  mock_protocol.c  mock_protocol.h  mock_serial.c  mock_serial.h  mock_time.c  mock_time.h
test/protocol/: test_packet.c  test_sanity.c  test_transfer_validation.c
